Buttons, spacing, padding fixes

--- a/Subcategory - Landing Page/Mythologia/css/base.css
+++ b/Subcategory - Landing Page/Mythologia/css/base.css
@@ -789,17 +789,19 @@ main {
 
 .extra-button {
 	width: 8rem;
+	height: 8rem;
 	/* min-width: 5rem; */
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background-color: black;
 	color: white;
-	height: 2.5rem;
+	/*height: 2.5rem;*/
 	position: absolute;
 	bottom: 6.3%;
 	right: 10vw;
 	border-radius: 999px;
+	overflow: 	hidden;
 }
 
 .extra-button button {
@@ -809,8 +811,18 @@ main {
 	background: none;
     font-family: "EB+Garamond";
     /*font-family: 'Proza Libre', sans-serif;*/
+    width: 100%;
+    height: 100%;
 }
-
+.extra-button button a{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+}
 .title {
 	font-size: 2.5rem;
 	color: black;
