--- a/Subcategory - Landing Page/Mythologia/css/magneticButton.css
+++ b/Subcategory - Landing Page/Mythologia/css/magneticButton.css
@@ -33,9 +33,21 @@ body {
 	user-select: none;
 	position: fixed;
 	top: 3rem;
-        left: 2rem;
+	left: 2rem;
 }
-
+.extra-button{
+	z-index: 9;
+	color: #fff;
+	background-color: dimgray;
+}
+.extra-button button a{
+	text-decoration: none;
+	color: #fff; 
+	font-family: "EB+Garamond";
+}
+.extra-button button a:hover {
+    color: #000;
+}
 .button {
 	cursor: pointer;
 	-moz-appearance: none;
