--- a/Subcategory - Landing Page/general.css
+++ b/Subcategory - Landing Page/general.css
@@ -25,19 +25,22 @@
 }
 
 .extra-button {
-	width: 7rem;
+	width: 6rem;
+	height: 6rem;
 	/* min-width: 5rem; */
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: black;
+	/*background-color: black;*/
+	background-color: dimgray;
 	color: white;
-	height: 2rem;
+	/*height: 2rem;*/
 	position: fixed;
 	top: 4%;
 	right: 10vw;
 	border-radius: 999px;
 	z-index: 2;
+	overflow: hidden;
 }
 
 .extra-button button {
@@ -45,11 +48,25 @@
 	border: none;
 	color: white;
 	background: none;
-    font-family: 'Lobster Two', cursive;
+    /*font-family: 'Lobster Two', cursive;*/
+    font-family: "EB+Garamond";
     letter-spacing: 2px;
+    width: 100%;
+    height: 100%;
 
 }
-
+.extra-button button a{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+}
+.extra-button button a:hover{
+	color: #000;
+}
 @media only screen and (max-width: 1200px) {
 	  .extra-button {
 		  right: 5rem;
